<resources>
    <string name="app_name">Where"'"s My Gang</string>
    <string name="title_activity_map">Where"'"s My Gang?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">0986780891</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About</string>
    <string name="check_phone">PHONE NUMBER must consist of numbers only</string>
    <string name="check_name">NAME only supports alphabet, numbers and spaces</string>
    <string name="empty_password">PASSWORD must not be empty</string>
    <string name="confirm_password_not_match">CONFIRM PASSWORD not match</string>
    <string name="error_request_server">Error occurs while requesting server. Please try later!</string>
    <string name="signup_id_existed">This phone has been registered. Please check your phone number again!</string>
    <string name="error_text">Error</string>
    <string name="ok_text">OK</string>
    <string name="login_after_signup">Successfully create your account.\nEnjoy!!!</string>
    <string name="remember_account">Keep me signed in</string>
    <string name="sign_up_underline_text">
        <u>SIGN UP</u>
    </string>
    <string name="sign_up_text">Sign up</string>
    <string name="login_text">Login</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="your_name_text">Your Name</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="login_wrong_phone">Your account does not exist. Please check again or sign up a new one</string>
    <string name="login_wrong_password">Login fail. Make sure you typed the correct password</string>

    <string name="title_activity_test_map">Map</string>
    <string name="missing_input">Please fill all inputs</string>
    <string name="create_room_fail">Fail to create your room. Please try again</string>
    <string name="create_room_success">Create room success</string>
    <string name="join_room_success">Join room success</string>
    <string name="join_room_fail">Fail to join room</string>
    <string name="join_text">Join</string>
    <string name="joining_text">Joining...</string>
    <string name="create_text">Create</string>
    <string name="requesting_text">Requesting...</string>
    <string name="leave_room_message">Do you want to leave Room %s</string>
    <string name="cancel_text">Cancel</string>
    <string name="leave_room_success">You have left your room</string>
    <string name="leave_room_fail">Leave room fail. Try again</string>
    <string name="leaving_text">Leaving room...</string>
    <string name="send_room_info_message">Your room ID: %s\nPassword: %s\nDo you want to send these info to
        your friends?</string>
    <string name="send_text">Send</string>
    <string name="room_info"> "Where My Gang\nRoom ID: %s\nPassword: %s \n Please download and install app Where My Gang: \n https://drive.google.com/open?id=1WTS1pp_TWKgCDOwZ6C0K2LY5WN2l9N3C  "</string>

    <string name="IDRoom">ID Room: 30</string>
    <string name="RoomName">Room Name: Vũng Tàu </string>
    <string name="CreateRoom">Create Room</string>
    <string name="JoinRoom">Join Room</string>
    <string name="LeaveRoom">Leave Room</string>
    <string name="LogOut">Logout</string>

    <string name="please_wait_text">Please wait...</string>
    <string name="logining">Signing into your account</string>
    <string name="enable_network_text">Network disabled</string>
    <string name="enable_network_message">This app requires internet to work. Please connect to a network!</string>
    <string name="enable_gps_text">GPS disabled</string>
    <string name="enable_gps_message">Turn on device location (GPS) and try again</string>

    <string name="string_sign_up">Don"'"t have account? <u>Sign up here</u>.</string>
    <string name="not_in_room_message">You are not in a room</string>
    <string name="room_id_x">Room ID: %d</string>
    <string name="gps_lost_message">Your location won"'"t be showed to your friends until you turned it on again</string>
    <string name="press_back_more_to_exit">Press back one more time to exit</string>
    <string name="about">Ứng dụng được phát triển bởi Trần Thanh Long và Huỳnh Tấn Phát \n
        Chúng tôi mong nhận được sự đóng góp, phản hồi từ người dùng để ứng dụng được hoàn thiện tốt hơn.\n
        Mọi chi tiết đóng góp xin gửi về email: huynhtanphat5596@gmail.com \n
        Chân thành cảm ơn, chúc các bạn có một trải nghiệm thú vị với ứng dụng này !!</string>
    <string name="thankyou">Chúng tôi xin chân thành cảm ơn.</string>
    <string name="network_lost_text">Network lost</string>
    <string name="network_lost_message">Please connect to a network to get the newest locations of your friends</string>
</resources>
