<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/item_create_room"
            android:title="@string/CreateRoom" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/item_join_room"
            android:title="@string/JoinRoom" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/item_leave_room"
            android:title="@string/LeaveRoom" />

    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/item_logout"
                android:title="@string/LogOut" />

        </menu>
    </item>

</menu>
